@@ -314,6 +314,7 @@ TESTS_twa = \
   core/autcross2.test \
   core/autcross3.test \
   core/autcross4.test \
+  core/autcross5.test \
   core/complementation.test \
   core/randpsl.test \
   core/cycles.test \
